[gd_scene load_steps=9 format=3 uid="uid://do7f84nn11kpm"]

[ext_resource type="PackedScene" uid="uid://bnpgrilieevim" path="res://Cenas/background.tscn" id="1_fs7ck"]
[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_xwmfb"]
[ext_resource type="FontFile" uid="uid://dtiwsuclcsp2g" path="res://Assets/fonts/poco/Poco.ttf" id="2_kirrm"]
[ext_resource type="Texture2D" uid="uid://dtkwpby6221qv" path="res://Assets/VoltarICon.png" id="2_yx3cp"]
[ext_resource type="FontFile" uid="uid://bbmsch2oktnm0" path="res://Assets/fonts/montreal/Montreal-Regular.ttf" id="3_01vq4"]

[sub_resource type="LabelSettings" id="LabelSettings_hbchq"]
line_spacing = 0.0
font = ExtResource("2_kirrm")
font_size = 48
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3xmrb"]
font = ExtResource("3_01vq4")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hp0lr"]
font = ExtResource("3_01vq4")

[node name="Start_Screen" type="Node"]
script = ExtResource("1_xwmfb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -3.0
offset_right = 654.0
offset_bottom = 335.0
color = Color(0, 0, 0, 0.239216)

[node name="Voltar dos Creditos" type="Button" parent="."]
anchors_preset = -1
anchor_right = 0.052
anchor_bottom = 0.1
offset_left = 30.0
offset_top = 20.0
offset_right = 18.72
offset_bottom = 6.0
icon = ExtResource("2_yx3cp")

[node name="Main" type="Node2D" parent="."]

[node name="Background" parent="Main" instance=ExtResource("1_fs7ck")]

[node name="Label" type="Label" parent="Main"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 185.0
offset_top = -15.0
offset_right = 454.0
offset_bottom = 105.0
grow_horizontal = 2
text = " Chamado de 
 Happy"
label_settings = SubResource("LabelSettings_hbchq")
horizontal_alignment = 1

[node name="Jogar" type="Button" parent="Main"]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 282.0
offset_top = 149.5
offset_right = 358.0
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_01vq4")
theme_override_font_sizes/font_size = 24
text = "Jogar"
flat = true

[node name="Label" type="Label" parent="Main/Jogar"]
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 29.0
text = "Jogar"
label_settings = SubResource("LabelSettings_3xmrb")

[node name="Opções" type="Button" parent="Main"]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 269.5
offset_top = 185.0
offset_right = 370.5
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_01vq4")
theme_override_font_sizes/font_size = 24
text = "Opções"
flat = true

[node name="Label" type="Label" parent="Main/Opções"]
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 29.0
text = "Opções"
label_settings = SubResource("LabelSettings_3xmrb")

[node name="Creditos Buttons" type="Button" parent="Main"]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 265.0
offset_top = 219.0
offset_right = 375.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_01vq4")
theme_override_font_sizes/font_size = 24
text = "Créditos"
flat = true

[node name="Label" type="Label" parent="Main/Creditos Buttons"]
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 29.0
text = "Créditos
"
label_settings = SubResource("LabelSettings_3xmrb")

[node name="Creditos" type="Node2D" parent="."]

[node name="Creditos Label" type="Label" parent="Creditos"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 199.5
offset_top = 70.5
offset_right = 440.5
offset_bottom = 249.5
grow_horizontal = 2
grow_vertical = 2
text = "Desenvolvedores:
Mateus Coimbra Braga
Tiago Rodrigues Albuquerque
Pedro Gadelha Paula

Soundtrack Original:
Mateus Coimbra Braga"
label_settings = SubResource("LabelSettings_hp0lr")
horizontal_alignment = 1

[connection signal="pressed" from="Voltar dos Creditos" to="." method="_on_voltar_dos_creditos_pressed"]
[connection signal="pressed" from="Main/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="Main/Creditos Buttons" to="." method="_on_creditos_buttons_pressed"]
